--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -424,6 +424,102 @@ h6 {
 /* 
 ------------table section--------------------------------
 */
+/*//////////////////////////////////////////////////////////////////
+[ FONT ]*/
+
+@font-face {
+  font-family: OpenSans-Regular;
+  src: url("../fonts/OpenSans/OpenSans-Regular.ttf");
+}
+
+/*//////////////////////////////////////////////////////////////////
+[ RESTYLE TAG ]*/
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+
+body,
+html {
+  height: 100%;
+  font-family: sans-serif;
+}
+
+/* ------------------------------------ */
+a {
+  margin: 0px;
+  transition: all 0.4s;
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+}
+
+a:focus {
+  outline: none !important;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+/* ------------------------------------ */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0px;
+}
+
+p {
+  margin: 0px;
+}
+
+ul,
+li {
+  margin: 0px;
+  list-style-type: none;
+}
+
+/* ------------------------------------ */
+input {
+  display: block;
+  outline: none;
+  border: none !important;
+}
+
+textarea {
+  display: block;
+  outline: none;
+}
+
+textarea:focus,
+input:focus {
+  border-color: transparent !important;
+}
+
+/* ------------------------------------ */
+button {
+  outline: none !important;
+  border: none;
+  background: transparent;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+iframe {
+  border: none !important;
+}
+
+/*//////////////////////////////////////////////////////////////////
+[ Utiliti ]*/
+
+/*//////////////////////////////////////////////////////////////////
+[ Table ]*/
 
 .limiter {
   width: 100%;
@@ -457,7 +553,7 @@ h6 {
 table {
   border-spacing: 1;
   border-collapse: collapse;
-  background: rgb(255, 255, 255);
+  background: white;
   border-radius: 10px;
   overflow: hidden;
   width: 100%;
@@ -473,7 +569,7 @@ table th {
 }
 table thead tr {
   height: 60px;
-  background: grey;
+  background: #36304a;
 }
 table tbody tr {
   height: 50px;
@@ -501,13 +597,13 @@ table th.r {
 .table100-head th {
   font-family: OpenSans-Regular;
   font-size: 18px;
-  color: rgba(55, 81, 126, 0.8);
+  color: #fff;
   line-height: 1.2;
   font-weight: unset;
 }
 
 tbody tr:nth-child(even) {
-  background-color: white;
+  background-color: #f5f5f5;
 }
 
 tbody tr {
@@ -633,6 +729,7 @@ tbody tr:hover {
     padding-right: 15px;
   }
 }
+
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
